Stop following text overflowing chip
With some styles the following text was too large for the chip.
Unfortunately, sizing it to be consistent made it unreadably small. To
solve this, we can show only the first line of the text in the following
chip and show the second as a tooltip instead.

Adapt patch to LibreOffice Online.

--- a/browser/css/toolbar.css
+++ b/browser/css/toolbar.css
@@ -3344,8 +3344,6 @@ menu-entry-with-icon.padding-left + menu-entry-icon.width */
 	); /* We expect the height to be --btn-size, give a bit for a border. To fully round the corners, this needs to be at least 50% of the height so --btn-size should do */
 	padding: 2px; /* This will become the grey border around the inner elements */
 
-	font-size: 0.8em; /* The "Following foo" text overflows the box at the default size, 0.8em seems about right */
-
 	display: none;
 }
 
@@ -3390,10 +3388,6 @@ menu-entry-with-icon.padding-left + menu-entry-icon.width */
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-}
-
-#followingChipBackground > #followingChip > #followingChipLine1 {
-	font-weight: bold;
 }
 
 #userListSummaryBackground > #userListSummary {
